[tool.poetry]
name = "account-transactions"
version = "0.1.0"
description = ""
authors = ["ivan tomilin <i.tomilin.91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
